added animations to invitable contacts

--- a/client/app/src/main/res/layout/layout_invitable_contacts_list_item.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts_list_item.xml
@@ -1,36 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ru.rambler.libs.swipe_layout.SwipeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/swipe_layout">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="10">
-            <CheckBox
-                android:id="@+id/cb_select"
+
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                style="@drawable/ripple"
-                android:background="@drawable/ripple"
-                android:theme="@style/greenCheck"/>
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_weight="2">
+                <CheckBox
+                    android:layout_marginLeft="14dp"
+                    android:id="@+id/cb_select"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    style="@drawable/ripple"
+                    android:background="@drawable/ripple"
+                    android:theme="@style/greenCheck"/>
+            </LinearLayout>
             <Button
                 android:id="@+id/btn_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="9"
+                android:layout_weight="8"
                 android:typeface="normal"
                 android:textAllCaps="false"
                 android:text="hello world"
                 style="@drawable/ripple"
                 android:background="@drawable/ripple"/>
         </LinearLayout>
+
     </ru.rambler.libs.swipe_layout.SwipeLayout>
 
     <net.cachapa.expandablelayout.ExpandableLayout
@@ -45,12 +56,12 @@
             android:weightSum="10">
 
             <LinearLayout
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
 
             <LinearLayout
-                android:layout_weight="9"
+                android:layout_weight="8"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
