--- a/client/app/src/main/res/layout/layout_invitable_contacts.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts.xml
@@ -12,8 +12,9 @@
         android:orientation="horizontal">
 
         <CheckBox
+            android:layout_marginLeft="14dp"
             android:id="@+id/cb_select_all"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             style="@drawable/ripple"
@@ -25,7 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:layout_weight="9"
+            android:layout_weight="8"
             style="@drawable/ripple"
             android:background="@drawable/ripple" />
 
