--- a/client/app/src/main/res/layout/layout_invitable_contacts_list_item.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts_list_item.xml
@@ -22,11 +22,22 @@
                 android:gravity="center"
                 android:layout_weight="2">
                 <CheckBox
-                    android:layout_marginLeft="14dp"
+                    android:visibility="visible"
                     android:id="@+id/cb_select"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     style="@drawable/ripple"
+                    android:layout_marginLeft="14dp"
+                    android:background="@drawable/ripple"
+                    android:theme="@style/greenCheck"/>
+                <CheckBox
+                    android:visibility="gone"
+                    android:layout_marginLeft="24dp"
+                    android:id="@+id/cb_select_hourglass"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    style="@drawable/ripple"
+                    android:layout_gravity="left|center_vertical"
                     android:background="@drawable/ripple"
                     android:theme="@style/greenCheck"/>
             </LinearLayout>
