--- a/client/app/src/main/res/layout/layout_invitable_contacts.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts.xml
@@ -11,25 +11,30 @@
         android:weightSum="10"
         android:orientation="horizontal">
 
-        <CheckBox
-            android:layout_marginLeft="14dp"
-            android:id="@+id/cb_select_all"
-            android:layout_weight="2"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            style="@drawable/ripple"
-            android:background="@drawable/ripple"
-            android:theme="@style/greenCheck"/>
+            android:gravity="center"
+            android:layout_weight="3">
+            <CheckBox
+                android:id="@+id/cb_select_all"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                style="@drawable/ripple"
+                android:background="@drawable/ripple"
+                android:theme="@style/greenCheck"/>
+        </LinearLayout>
 
         <Button
+            android:gravity="left|center_vertical"
+            android:paddingLeft="32dp"
             android:id="@+id/btn_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:layout_weight="8"
+            android:layout_weight="7"
             style="@drawable/ripple"
             android:background="@drawable/ripple" />
-
     </LinearLayout>
 
     <ScrollView
