--- a/client/app/src/main/res/layout/layout_invitation_list_item.xml
+++ b/client/app/src/main/res/layout/layout_invitation_list_item.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="12dp"
+    android:background="@drawable/ripple"
+    style="@drawable/ripple"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
