--- a/client/app/src/main/res/layout/layout_configured_network_list_item.xml
+++ b/client/app/src/main/res/layout/layout_configured_network_list_item.xml
@@ -1,19 +1,31 @@
-<ru.rambler.libs.swipe_layout.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="4dp"
+    app:cardCornerRadius="12dp"
+    android:orientation="horizontal">
+
+
+    <ru.rambler.libs.swipe_layout.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/card_view_outline">
+
 
     <!--CENTER. app:gravity="center" - is default value -->
     <LinearLayout
         android:id="@+id/middle_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@drawable/ripple"
+        android:orientation="vertical"
         android:background="@drawable/ripple"
-        android:orientation="vertical">
+        style="@drawable/ripple">
 
         <LinearLayout
-            android:layout_marginTop="6dp"
+            android:layout_marginTop="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -56,15 +68,12 @@
                     android:id="@+id/tv_active_users"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="2dp"
                     android:text="3 active users"/>
             </LinearLayout>
 
         </LinearLayout>
-        <LinearLayout
-            android:layout_marginTop="4dp"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#837d7d"></LinearLayout>
+
 
     </LinearLayout>
 
@@ -99,4 +108,7 @@
                 -->
         </LinearLayout>
     </LinearLayout>
+
 </ru.rambler.libs.swipe_layout.SwipeLayout>
+
+</android.support.v7.widget.CardView>
