--- a/client/app/src/main/res/layout/activity_contact.xml
+++ b/client/app/src/main/res/layout/activity_contact.xml
@@ -44,8 +44,18 @@
             android:layout_height="400dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/themedarker">
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.example.eric.wishare.WiContactSharedNetworkListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:id="@+id/contactNetworkList">
+
+            </com.example.eric.wishare.WiContactSharedNetworkListView>
 
         </ScrollView>
     </LinearLayout>
