Contact Activity redone

--- a/client/app/src/main/res/layout/layout_invitable_contacts_list_item.xml
+++ b/client/app/src/main/res/layout/layout_invitable_contacts_list_item.xml
@@ -54,7 +54,7 @@
     </ru.rambler.libs.swipe_layout.SwipeLayout>
 
     <net.cachapa.expandablelayout.ExpandableLayout
-        android:id="@+id/eric"
+        android:id="@+id/expandable_contact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
