--- a/client/app/src/main/res/layout/layout_contact_shared_network_list_item.xml
+++ b/client/app/src/main/res/layout/layout_contact_shared_network_list_item.xml
@@ -1,74 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     android:id="@+id/center_view"
-    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_width="match_parent"
     style="@drawable/ripple"
     android:background="@drawable/ripple"
-    android:orientation="vertical"
+    android:paddingBottom="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ru.rambler.libs.swipe_layout.SwipeLayout
+    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="12dp"
+        android:orientation="horizontal">
 
-        <!--Follow layout_permitted_contacts_list_item.xml-->
-        <!--Add checkboxes-->
         <LinearLayout
-            android:layout_marginTop="6dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="4dp">
-            <ImageView
-                android:id="@+id/iv_wifi_icon_spot"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_wifi_black_48dp"/>
+            style="@drawable/ripple"
+            android:background="@drawable/ripple"
+            android:orientation="vertical"
+            xmlns:android="http://schemas.android.com/apk/res/android">
 
-            <LinearLayout
-                android:layout_marginLeft="16dp"
+            <ru.rambler.libs.swipe_layout.SwipeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:background="@drawable/card_view_outline">
+
+                <!--Follow layout_permitted_contacts_list_item.xml-->
+                <!--Add checkboxes-->
+                <LinearLayout
+                    android:layout_marginTop="6dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="4dp">
+
+                    <CheckBox
+                        android:visibility="invisible"
+                        android:id="@+id/cb_network_select"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:checked="false"
+                        android:layout_weight="1"
+                        android:button="@drawable/cb_selector"
+                        android:background="@drawable/ripple"
+                        style="@drawable/ripple"/>
+
+                    <ImageView
+                        android:id="@+id/iv_wifi_icon_spot"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_wifi_black_48dp"/>
+
+                    <LinearLayout
+                        android:layout_marginStart="16dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:textSize="20sp"
+                                android:id="@+id/btn_network_name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+
+                            <ImageView
+                                android:layout_marginLeft="8dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:id="@+id/iv_configured_status"
+                                android:src="@drawable/ic_warning_orange_24dp"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+            </ru.rambler.libs.swipe_layout.SwipeLayout>
+
+            <net.cachapa.expandablelayout.ExpandableLayout
+                android:id="@+id/expandable_network"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:textSize="20sp"
-                        android:id="@+id/tv_network_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_marginLeft="8dp"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:id="@+id/iv_configured_status"
-                        android:src="@drawable/ic_warning_orange_24dp"/>
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_connection_status_text"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Connection status: "/>
+
+                        <TextView
+                            android:id="@+id/tv_connection_status_result"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Good"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingRight="120dp"
+                            android:paddingLeft="120dp"
+                            android:text="Active users"/>
+
+                        <!--ScrollView for contacts connected to this network-->
+                        <ScrollView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/ll_contacts_with_shared_network"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+                            </LinearLayout>
+                        </ScrollView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/btn_network_activity"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@drawable/ripple"
+                            android:background="@drawable/ripple"
+                            android:text="Start Activity"/>
+
+                    </LinearLayout>
                 </LinearLayout>
 
-                <TextView
-                    android:textSize="16sp"
-                    android:id="@+id/tv_connection_status"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
+            </net.cachapa.expandablelayout.ExpandableLayout>
         </LinearLayout>
-    </ru.rambler.libs.swipe_layout.SwipeLayout>
-
-    <net.cachapa.expandablelayout.ExpandableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <!--ScrollView for contacts connected to this network-->
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </ScrollView>
-
-
-    </net.cachapa.expandablelayout.ExpandableLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
