--- a/client/app/src/main/res/layout/layout_contact_shared_network_list.xml
+++ b/client/app/src/main/res/layout/layout_contact_shared_network_list.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -31,7 +31,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,5 +38,4 @@
             android:id="@+id/ll_network_list_items">
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
