--- a/client/app/src/main/res/layout/layout_contact_shared_network_list_item.xml
+++ b/client/app/src/main/res/layout/layout_contact_shared_network_list_item.xml
@@ -14,16 +14,17 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:checked="false"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:button="@drawable/cb_selector"
         android:background="@drawable/ripple"
         style="@drawable/ripple"/>
 
     <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:cardUseCompatPadding="true"
+        android:layout_weight="6"
         app:cardElevation="4dp"
         app:cardCornerRadius="12dp"
         android:orientation="horizontal">
