--- a/client/app/src/main/res/layout/layout_contact_shared_network_list_item.xml
+++ b/client/app/src/main/res/layout/layout_contact_shared_network_list_item.xml
@@ -9,7 +9,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <CheckBox
-        android:visibility="invisible"
+        android:visibility="gone"
         android:id="@+id/cb_network_select"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -98,21 +98,34 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:weightSum="2"
                         android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/tv_connection_status_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="8dp"
+                            android:text="Connection status: "/>
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Connection status: "/>
-
+                            android:orientation="horizontal">
                         <TextView
                             android:id="@+id/tv_connection_status_result"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:text="Good"/>
+                        </LinearLayout>
 
                     </LinearLayout>
 
@@ -120,29 +133,60 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
-                        android:orientation="vertical">
+                        android:weightSum="2"
+                        android:paddingBottom="8dp"
+                        android:orientation="horizontal">
 
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:paddingLeft="8dp"
+                                android:text="Active users: "/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="3"/>
+
+                        </LinearLayout>
+                        <!--ScrollView for contacts connected to this network-->
+                        <!--<ScrollView-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content">-->
+                            <!--<LinearLayout-->
+                                <!--android:id="@+id/ll_contacts_with_shared_network"-->
+                                <!--android:layout_width="match_parent"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:orientation="vertical">-->
+                            <!--</LinearLayout>-->
+                        <!--</ScrollView>-->
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingRight="120dp"
-                            android:paddingLeft="120dp"
-                            android:text="Active users"/>
-
-                        <!--ScrollView for contacts connected to this network-->
-                        <ScrollView
+                            android:textAlignment="center"
+                            android:gravity="center"
+                            android:text="Data usage over the past 4 days:"/>
+                        <com.jjoe64.graphview.GraphView
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <LinearLayout
-                                android:id="@+id/ll_contacts_with_shared_network"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-                            </LinearLayout>
-                        </ScrollView>
+                            android:layout_height="200dp"
+                            android:paddingEnd="20dp"
+                            android:id="@+id/graph" />
                     </LinearLayout>
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -155,7 +199,7 @@
                             android:layout_height="wrap_content"
                             style="@drawable/ripple"
                             android:background="@drawable/ripple"
-                            android:text="Start Activity"/>
+                            android:text="View Network Info"/>
 
                     </LinearLayout>
                 </LinearLayout>
