--- a/client/app/src/main/res/layout/activity_network.xml
+++ b/client/app/src/main/res/layout/activity_network.xml
@@ -35,6 +35,12 @@
             android:layout_gravity="center"
             android:src="@drawable/ic_search_black_24dp"/>
 
+        <LinearLayout
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:layout_width="0px"
+            android:layout_height="0px"/>
+
         <EditText
             android:id="@+id/edit_text_search_bar"
             android:layout_width="match_parent"
