--- a/client/app/src/main/res/layout/layout_permitted_contacts_list_item.xml
+++ b/client/app/src/main/res/layout/layout_permitted_contacts_list_item.xml
@@ -23,31 +23,42 @@
                 android:button="@drawable/cb_selector"
                 android:background="@drawable/ripple"
                 style="@drawable/ripple"/>
-            <Button
-                android:id="@+id/btn_name"
+
+            <LinearLayout
+                android:id="@+id/row"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:typeface="normal"
-                android:textAllCaps="false"
-                android:text="hello wrold"
-                style="@drawable/ripple"
+                android:layout_weight="9"
+                android:weightSum="9"
                 android:background="@drawable/ripple"
-                android:gravity="left|center_vertical"/>
+                style="@drawable/ripple">
+                <Button
+                    android:clickable="false"
+                    android:paddingLeft="4dp"
+                    android:id="@+id/btn_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:typeface="normal"
+                    android:textAllCaps="false"
+                    android:text="hello wrold"
+                    android:background="@drawable/ripple"
+                    android:gravity="left|center_vertical"/>
+                <TextView
+                    android:id="@+id/tv_data"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="2"/>
 
-            <TextView
-                android:id="@+id/tv_data"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="2"/>
+                <TextView
+                    android:id="@+id/tv_expires"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:gravity="center"/>
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_expires"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:gravity="center"/>
         </LinearLayout>
     </ru.rambler.libs.swipe_layout.SwipeLayout>
 
