--- a/client/app/src/main/res/layout/layout_permitted_contacts_list_item.xml
+++ b/client/app/src/main/res/layout/layout_permitted_contacts_list_item.xml
@@ -65,7 +65,7 @@
     <net.cachapa.expandablelayout.ExpandableLayout
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
-        android:id="@+id/eric"
+        android:id="@+id/expandable_contact"
         android:background="@color/themedarker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
