--- a/client/app/src/main/res/layout/layout_permitted_contacts_list_item.xml
+++ b/client/app/src/main/res/layout/layout_permitted_contacts_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -34,8 +35,8 @@
                 style="@drawable/ripple">
                 <TextView
                     android:clickable="false"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
                     android:paddingLeft="8dp"
                     android:textSize="16sp"
                     android:id="@+id/btn_name"
@@ -60,6 +61,29 @@
                     android:gravity="center"/>
             </LinearLayout>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:background="#d9e90909"
+            app:gravity="right"
+            app:bring_to_clamp="100dp"
+            app:clamp="self"
+            app:sticky="none">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:gravity="center">
+                <ImageButton
+                    android:id="@+id/iv_trash"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:src="@drawable/ic_phonelink_erase_black_24dp"/>
+            </LinearLayout>
         </LinearLayout>
     </ru.rambler.libs.swipe_layout.SwipeLayout>
 
