--- a/client/app/src/main/res/layout/activity_main.xml
+++ b/client/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                 android:background="@drawable/scrollview_outline">
 
                 <!-- Aditya, this is your class. -->
-                <com.example.eric.wishare.WiConfiguredNetworkListView
+                <com.example.eric.wishare.view.WiConfiguredNetworkListView
                     android:layout_width="match_parent"
                     android:orientation="vertical"
                     android:layout_height="match_parent"
@@ -47,7 +47,7 @@
                     android:layout_marginRight="4dp"
                     android:id="@+id/configured_network_list">
 
-                </com.example.eric.wishare.WiConfiguredNetworkListView>
+                </com.example.eric.wishare.view.WiConfiguredNetworkListView>
 
             </ScrollView>
 
@@ -95,7 +95,7 @@
                 app:layout_constraintTop_toBottomOf="@id/btn_manage_contacts"
                 app:layout_constraintBottom_toTopOf="@id/btn_my_invitations"/>
 
-            <com.example.eric.wishare.WiMyInvitationsButton
+            <com.example.eric.wishare.view.WiMyInvitationsButton
                 android:id="@+id/btn_my_invitations"
                 android:layout_width="match_parent"
                 android:layout_marginEnd="40dp"
