--- a/client/app/src/main/res/layout/layout_tabbed_scroll_view.xml
+++ b/client/app/src/main/res/layout/layout_tabbed_scroll_view.xml
@@ -23,7 +23,7 @@
 
         </android.support.design.widget.TabLayout>
 
-        <com.example.eric.wishare.WiTabbedScrollViewPager
+        <com.example.eric.wishare.view.WiTabbedScrollViewPager
             app:layout_constraintTop_toBottomOf="@id/tab_layout"
             app:layout_constraintBottom_toTopOf="@+id/layout"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -33,7 +33,7 @@
             android:layout_height="0dp"
             android:layout_below="@id/tab_layout">
 
-        </com.example.eric.wishare.WiTabbedScrollViewPager>
+        </com.example.eric.wishare.view.WiTabbedScrollViewPager>
 
         <LinearLayout
             app:layout_constraintTop_toBottomOf="@id/view_pager"
