--- a/client/app/src/main/res/layout/layout_contact_shared_network_list_item.xml
+++ b/client/app/src/main/res/layout/layout_contact_shared_network_list_item.xml
@@ -19,14 +19,13 @@
         android:background="@drawable/ripple"
         style="@drawable/ripple"/>
 
-    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:cardUseCompatPadding="true"
+        style="@drawable/ripple"
+        android:background="@drawable/ripple"
         android:layout_weight="6"
-        app:cardElevation="4dp"
-        app:cardCornerRadius="12dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -206,5 +205,5 @@
 
             </net.cachapa.expandablelayout.ExpandableLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 </LinearLayout>
