Divider added to ContactSharedNetworkListItem

--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -144,4 +144,5 @@
     <color name="themedarkest">#333333</color>
     <color name="themedark">#808080</color>
     <color name="themeGreen">#1A964E</color>
+    <color name="wishare_standard">#23CE6B</color>
 </resources>
