--- a/client/app/src/main/res/layout/layout_contact_shared_network_list_item.xml
+++ b/client/app/src/main/res/layout/layout_contact_shared_network_list_item.xml
@@ -4,202 +4,227 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:paddingBottom="10dp"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <CheckBox
-        android:visibility="gone"
-        android:id="@+id/cb_network_select"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:checked="false"
-        android:layout_weight="0.5"
-        android:button="@drawable/cb_selector"
-        android:background="@drawable/ripple"
-        style="@drawable/ripple"/>
-
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@drawable/ripple"
-        android:background="@drawable/ripple"
-        android:layout_weight="6"
         android:orientation="horizontal">
 
-        <LinearLayout
+        <CheckBox
+            android:visibility="gone"
+            android:id="@+id/cb_network_select"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:checked="false"
+            android:layout_weight="0.5"
+            android:button="@drawable/cb_selector"
+            android:background="@drawable/ripple"
+            style="@drawable/ripple"/>
+
+        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:elevation="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@drawable/ripple"
-            android:background="@drawable/ripple"
-            android:orientation="vertical"
-            xmlns:android="http://schemas.android.com/apk/res/android">
+            android:divider="?android:listDivider"
+            android:showDividers="middle"
+            android:orientation="horizontal">
 
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content">-->
-            <!--android:background="@drawable/card_view_outline">-->
-
-            <!--Follow layout_permitted_contacts_list_item.xml-->
-            <!--Add checkboxes-->
             <LinearLayout
-                android:layout_marginTop="6dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginLeft="4dp">
+                android:orientation="vertical"
+                android:background="@drawable/ripple"
+                xmlns:android="http://schemas.android.com/apk/res/android">
 
-                <ImageView
-                    android:id="@+id/iv_wifi_icon_spot"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_wifi_black_48dp"/>
 
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content">-->
+                <!--android:background="@drawable/card_view_outline">-->
+
+                <!--Follow layout_permitted_contacts_list_item.xml-->
+                <!--Add checkboxes-->
                 <LinearLayout
-                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="6dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="horizontal"
+                    android:layout_marginStart="4dp">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:textSize="20sp"
-                            android:id="@+id/btn_network_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
-
-                        <ImageView
-                            android:layout_marginLeft="8dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:id="@+id/iv_configured_status"
-                            android:src="@drawable/ic_warning_orange_24dp"/>
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
-
-            <net.cachapa.expandablelayout.ExpandableLayout
-                android:id="@+id/expandable_network"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:weightSum="2"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/tv_connection_status_text"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:paddingLeft="8dp"
-                                android:text="Connection status: "/>
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
-                            <TextView
-                                android:id="@+id/tv_connection_status_result"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Good"/>
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    <ImageView
+                        android:id="@+id/iv_wifi_icon_spot"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
-                        android:weightSum="2"
-                        android:paddingBottom="8dp"
+                        android:cropToPadding="true"
+                        android:src="@drawable/ic_wifi_black_48dp"/>
+
+                    <LinearLayout
+                        android:layout_marginStart="16dp"
+                        android:layout_weight="8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
                             <TextView
+                                android:textSize="20sp"
+                                android:id="@+id/btn_network_name"
+                                android:paddingTop="10dp"
+                                android:paddingLeft="10dp"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:paddingLeft="8dp"
-                                android:text="Active users: "/>
+                                android:layout_height="wrap_content" />
                         </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="3"/>
-
-                        </LinearLayout>
-                        <!--ScrollView for contacts connected to this network-->
-                        <!--<ScrollView-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content">-->
                         <!--<LinearLayout-->
-                        <!--android:id="@+id/ll_contacts_with_shared_network"-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:orientation="vertical">-->
+                            <!--android:layout_width="0dp"-->
+                            <!--android:layout_weight="1"-->
+                            <!--android:layout_height="match_parent">-->
+
+                            <!--<ImageView-->
+                                <!--android:layout_marginStart="8dp"-->
+                                <!--android:paddingTop="10dp"-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_gravity="center"-->
+                                <!--android:id="@+id/iv_configured_status"-->
+                                <!--android:src="@drawable/ic_warning_orange_24dp"/>-->
                         <!--</LinearLayout>-->
-                        <!--</ScrollView>-->
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="center"
-                            android:gravity="center"
-                            android:text="Data usage over the past 4 days:"/>
-                        <com.jjoe64.graphview.GraphView
-                            android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:paddingEnd="20dp"
-                            android:id="@+id/graph" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/btn_network_activity"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            style="@drawable/ripple"
-                            android:background="@drawable/ripple"
-                            android:text="View Network Info"/>
-
                     </LinearLayout>
                 </LinearLayout>
 
-            </net.cachapa.expandablelayout.ExpandableLayout>
+                <net.cachapa.expandablelayout.ExpandableLayout
+                    android:id="@+id/expandable_network"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:weightSum="2"
+                            android:orientation="horizontal">
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:orientation="horizontal">
+
+                                <TextView
+                                    android:id="@+id/tv_connection_status_text"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:paddingLeft="8dp"
+                                    android:text="Connection status: "/>
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:id="@+id/tv_connection_status_result"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Good"/>
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:weightSum="2"
+                            android:paddingBottom="8dp"
+                            android:orientation="horizontal">
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:paddingLeft="8dp"
+                                    android:text="Active users: "/>
+                            </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:orientation="horizontal">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="3"/>
+
+                            </LinearLayout>
+                            <!--ScrollView for contacts connected to this network-->
+                            <!--<ScrollView-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content">-->
+                            <!--<LinearLayout-->
+                            <!--android:id="@+id/ll_contacts_with_shared_network"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:orientation="vertical">-->
+                            <!--</LinearLayout>-->
+                            <!--</ScrollView>-->
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textAlignment="center"
+                                android:gravity="center"
+                                android:text="Data usage over the past 4 days:"/>
+                            <com.jjoe64.graphview.GraphView
+                                android:layout_width="match_parent"
+                                android:layout_height="200dp"
+                                android:paddingEnd="20dp"
+                                android:id="@+id/graph" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="horizontal">
+
+                            <Button
+                                android:id="@+id/btn_network_activity"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                style="@drawable/ripple"
+                                android:background="@drawable/ripple"
+                                android:text="View Network Info"/>
+
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </net.cachapa.expandablelayout.ExpandableLayout>
+            </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@drawable/shared_network_border"/>
+
 </LinearLayout>
